User login and Registration

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PropertySellingConnectionString": "server=propertysellingdb.co01geqgfhj0.us-east-1.rds.amazonaws.com,1433;Database=pSellingDB;Integrated Security=false;User Id=wenura;Password=wenura123;Encrypt=true;TrustServerCertificate=true;"
+  },
+  "ApplicationSettings": {
+    "JWT_Secret": "1234567890123456",
+    "ClientUrl": "http://localhost:4200"
+  }
 }
